/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package com.dremio.dac.service.search;

option java_package = "com.dremio.dac.service.search";
option java_outer_classname = "SearchRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

// request and response definitions of search service
message SearchQueryRequest {
  required string query = 1;
  optional string username = 2;
}

message SearchQueryResponseTags {
  required string id = 1;
  required string entityId = 2;
  repeated string tags = 3;
  optional string version = 4;
  optional int64 lastModified = 5;
}

message SearchQueryResponseEntity {
  required bytes response = 1; // TODO(DX-10857): change from opaque object to protobuf;
  optional SearchQueryResponseTags tags = 2;
}

message SearchQueryResponse {
  repeated SearchQueryResponseEntity results = 1;
  optional string failureMessage = 2;
}
